[workspace]
members = [
  "contracts/mock_anchor",
  "contracts/mock_mirror",
  "contracts/mock_oracle",
  "contracts/mock_red_bank", 
  "packages/fields_of_mars"
]

[profile.release.package.fields-of-mars]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
