[package]
name = "martian-field"
version = "1.0.0"
authors = ["larry_0x <larry@delphidigital.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/mars-protocol/field-of-mars"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "0.16"
cw-asset = { version = "1.0", features = ["legacy"] }
cw-storage-plus = "0.9"
fields-of-mars = { path = "../../packages/fields-of-mars" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
uint = "0.9.1"