[package]
name = "mock-astro-generator"
version = "0.5.0"
authors = ["larry_0x <larry@delphidigital.io>"]
edition = "2018"
license = "UNLICENSED"
repository = "https://github.com/mars-protocol/field-of-mars"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
fields-of-mars = { path = "../../packages/fields-of-mars" }

astroport = "0.3.1"

cosmwasm-std = "^0.16"
cw20 = "0.8.0" # Astroport uses cw-plus 0.8, while Mars uses 0.9, which are not compatible in some cases
cw-storage-plus = "^0.9"

cw-asset = { version = "0.3.2", features = ["legacy"] }

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }