[package]
name = "mock-mirror"
version = "0.5.0"
authors = ["larry_0x <larry@delphidigital.io>"]
edition = "2018"
license = "UNLICENSED"
repository = "https://github.com/mars-protocol/field-of-mars"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
fields-of-mars = { path = "../../packages/fields-of-mars" }

mirror-protocol = "2.1.1"

cosmwasm-std = "0.16.0"
# Mirror uses cw20 0.8.0 which is not compatible with the latest (0.9.1)
cw20 = "0.8.0"
cw-storage-plus = "0.9.1"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }