[package]
name = "mock-oracle"
version = "1.0.0"
authors = ["larry <larry@delphidigital.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/mars-protocol/field-of-mars"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
astroport = "1.0"
fields-of-mars = { path = "../../packages/fields-of-mars" }
cosmwasm-std = "0.16"
cw-asset = { version = "1.0", features = ["legacy"] }
cw-storage-plus = "0.9"
mars-core = "1.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }