[package]
name = "mock-red-bank"
version = "0.5.0"
authors = ["larry_0x <larry@delphidigital.io>"]
edition = "2018"
license = "UNLICENSED"
repository = "https://github.com/mars-protocol/field-of-mars"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
fields-of-mars = { path = "../../packages/fields-of-mars" }

mars-core = { path = "../../packages/mars-core" }

cosmwasm-std = "0.16.0"
cw20 = "0.9.1"
cw-storage-plus = "0.9.1"

cw-asset = { version = "0.3.0", features = ["terra", "legacy"] }

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
