[package]
name = "mock-red-bank"
version = "1.0.0"
authors = ["larry <larry@delphidigital.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/mars-protocol/field-of-mars"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "0.16"
cw20 = "0.9"
cw-asset = { version = "1.0", features = ["legacy"] }
cw-storage-plus = "0.9"
fields-of-mars = { path = "../../packages/fields-of-mars" }
mars-core = "1.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }