[package]
name = "mock-anchor"
version = "0.3.0"
authors = ["larry_0x <larry@delphidigital.io>"]
edition = "2018"
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-bignumber = "1.0"
cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
cw20 = "0.2"
field-of-mars = { path = "../../packages/field_of_mars" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
