[package]
name = "mock-bluna-hub"
version = "0.1.0"
authors = ["larry0x <larry@delphidigital.io>"]
edition = "2018"
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
anchor-basset-hub = { path = "../../packages/anchor_basset_hub" }
cosmwasm-bignumber = "1.0"
cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
cw20 = "0.2"
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
terraswap = "1.2.0"
