[package]
name = "mock-mars"
version = "0.4.1"
authors = ["larry_0x <larry@delphidigital.io>"]
edition = "2018"
license = "UNLICENSED"
repository = "https://github.com/mars-protocol/field-of-mars"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
# Mars
field-of-mars = { version = "0.4.1", path = "../../packages/field_of_mars" }
# CosmWasm
cosmwasm-std = "0.16.0"
cw-storage-plus = "0.8.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
# Terra
terra-cosmwasm = "2.1.0"
cosmwasm-bignumber = "2.1.0"