[package]
name = "mock-mirror"
version = "0.4.0"
authors = ["larry_0x <larry@delphidigital.io>"]
edition = "2018"
license = "UNLICENSED"
repository = "https://github.com/mars-protocol/field-of-mars"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
field-of-mars = { version = "0.4.0", path = "../../packages/field_of_mars" }
cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
cw20 = "0.7.0"
cw-storage-plus = "0.7.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }