[package]
name = "mock-red-bank"
version = "0.4.1"
authors = ["larry_0x <larry@delphidigital.io>"]
edition = "2018"
license = "UNLICENSED"
repository = "https://github.com/mars-protocol/field-of-mars"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
fields-of-mars = { path = "../../packages/fields_of_mars" }

mars = { path = "../../packages/mars_core" }
red-bank = { path = "../../packages/red_bank" } 

cosmwasm-std = "0.16.0"
cw20 = "0.8.0"
cw-storage-plus = "0.8.0"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
